[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/menuObjects/Options/OptionTabs/Sound_Options.gd" type="Script" id=1]
[ext_resource path="res://resources/sounds/menu/button_click.mp3" type="AudioStream" id=2]
[ext_resource path="res://resources/sounds/menu/button_hover.mp3" type="AudioStream" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Sound" type="HBoxContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 39.0
script = ExtResource( 1 )

[node name="VSeparator2" type="VSeparator" parent="."]
margin_right = 424.0
margin_bottom = 681.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 2 )

[node name="Sliders" type="VBoxContainer" parent="."]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 681.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Sliders"]
margin_top = 285.0
margin_right = 424.0
margin_bottom = 299.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Master"
align = 1

[node name="MasterSlider" type="HSlider" parent="Sliders"]
margin_top = 303.0
margin_right = 424.0
margin_bottom = 319.0
max_value = 0.99
step = 0.055
value = 0.99
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Sliders"]
margin_top = 323.0
margin_right = 424.0
margin_bottom = 337.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Music"
align = 1

[node name="SoundSlider" type="HSlider" parent="Sliders"]
margin_top = 341.0
margin_right = 424.0
margin_bottom = 357.0
max_value = 0.99
step = 0.055
value = 0.99
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Sliders"]
margin_top = 361.0
margin_right = 424.0
margin_bottom = 375.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Effects"
align = 1

[node name="EffectsSlider" type="HSlider" parent="Sliders"]
margin_top = 379.0
margin_right = 424.0
margin_bottom = 395.0
max_value = 0.99
step = 0.055
value = 0.99
tick_count = 10
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 681.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 3 )

[node name="audioStreams" type="Node" parent="."]

[node name="click" type="AudioStreamPlayer" parent="audioStreams"]
stream = ExtResource( 2 )
bus = "Effects"

[node name="hover" type="AudioStreamPlayer" parent="audioStreams"]
stream = ExtResource( 3 )
bus = "Effects"

[connection signal="value_changed" from="Sliders/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="Sliders/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="value_changed" from="Sliders/EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
